CHANGE LOG

2011-02-14

* fixed issue with description column causing the html to break when the module/dist description
  contained greater than or less than signs
* fixed issue where urls that that had escaped characters would not work except in Firefox
* now using json instead of jsonp ajax calls -- this fixes an issue with the loader image never
  disappearing when searching an invalid author
* the tweet button now has via @metacpan as the default text instead of via @ioncache

2011-01-09

* added a change log to the homepage
* added links to CPAN Testers and Dependencies to the dist details page
* added dist description to the dist details page

2011-01-07

* added module and dist abstracts to all result tables
