@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" type="text/css" media="screen" href="/css/screen.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="/css/pod.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="http://jqueryui.com/themes/base/ui.all.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/themes/base/jquery.ui.all.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="http://yandex.st/highlightjs/5.15/styles/vs.min.css" />
 
     </head>
