@@ -1,5 +1,10 @@
 CHANGE LOG
 
+2011-03-18
+
+* combined the module name and description columns into one column on the module search page,
+  may update some other pages like this if this format is liked
+
 2011-02-14
 
 * fixed issue with description column causing the html to break when the module/dist description
